<resources>
    <string name="app_name">GraduationThesis5</string>
    <string name="action_settings">設定</string>
    <string name="search_view"></string>
    <string name="page_back">戻る</string>
    <string name="page_progress">進む</string>
    <string name="new_tab">新しいタブ</string>
    <string name="reload">更新</string>
    <string name="filter">フィルタ設定</string>
    <string name="home">ホーム</string>
    <string name="add">追加したいドメイン</string>
    <string name="title_activity_filter_settings">FilterSettings</string>

</resources>
