<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.koba.graduationthesis5.MainActivity">

    <item
        android:id="@+id/homeButton"
        android:icon="@drawable/ic_action_phone"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="Home"/>

    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_view"/>

    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/reload"
        android:orderInCategory="100"
        android:title="@string/reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/page_back"
        android:orderInCategory="100"
        android:title="@string/page_back"
        app:showAsAction="never" />

    <item
        android:id="@+id/page_progress"
        android:orderInCategory="100"
        android:title="@string/page_progress"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/new_tab"
        android:orderInCategory="100"
        android:title="@string/new_tab"
        app:showAsAction="never"/>

    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="never"/>

</menu>
